--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@material-ui/core": "^5.0.0-beta.5",
     "@mui/lab": "^5.0.0-alpha.53",
     "@mui/material": "^5.0.6",
+    "@swc/core": "^1.2.106",
     "date-fns": "^2.25.0",
     "next": "12.0.1",
     "react": "17.0.2",
