--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "date-fns": "^2.25.0",
     "next": "12.0.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.3.1"
   },
   "devDependencies": {
     "@types/react": "^17.0.33",
