--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "@mui/material": "^5.0.6",
     "@swc/core": "^1.2.106",
     "date-fns": "^2.25.0",
-    "next": "12.0.1",
+    "next": "^12.0.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "react-lottie": "^1.2.3"
   },
   "devDependencies": {
     "@types/react": "^17.0.33",
